--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                             <div class="row align-item-c d-flex">
                                 <div class="lego">
                                     <a href="/Home.html">
-                                        <img src="/img/logo (2).png" alt="">
+                                        <img src="./img/logo-(2).png" alt="">
                                     </a>
                                 </div>
                                 <div class="menu">
