--- a/Home.html
+++ b/Home.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style.css">
     <!-- font-boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- responsive -->
+    <link rel="stylesheet" href="responsive.css">
 
 
 </head>
@@ -21,7 +23,7 @@
             <div class="pic">
                 <div class="header-top">
                     <div class="container">
-                        <div class="row d-flex">
+                        <div class="row ">
                             <div class="left-row ">
                                 <div class="icon">
                                     <a href="#"><i class='bx bxl-linkedin'></i></a>
@@ -48,10 +50,10 @@
                 <div class="sticky-header">
                     <div class="container">
                         <div class="header-bottom">
-                            <div class="row align-item-c d-flex">
+                            <div class="row ">
                                 <div class="lego">
                                     <a href="/Home.html">
-                                        <img src="/img/logo (2).png" alt="">
+                                        <img src="img/logo (2).png" alt="">
                                     </a>
                                 </div>
                                 <div class="menu">
@@ -61,13 +63,13 @@
                                                 <li><a href="">Home</a></li>
                                                 <li><a href="">About</a></li>
                                                 <li><a href="">Services</a></li>
-                                                <li><a href="">Blog</a>
+                                                <li><a href="">Blog <i class='bx bx-chevron-down'></i></a>
                                                     <ul class="submenu">
                                                         <li><a href="">Blog</a></li>
                                                         <li><a href="">Single-Blog</a></li>
                                                     </ul>
                                                 </li>
-                                                <li><a href="">Pages</a>
+                                                <li><a href="">Pages <i class='bx bx-chevron-down'></i></a>
                                                     <ul class="submenu">
                                                         <li><a href="#">Element</a></li>
                                                         <li><a href="#">Partfolio</a></li>
@@ -77,8 +79,8 @@
                                                 <li><a href="index.html">Contact</a></li>
                                             </ul>
                                         </nav>
-                                        <div class="Quote">
-                                            <div class="key d-flex">
+                                        <div class="Quote d-flex">
+                                            <div class="key ">
                                                 <div class="serch">
                                                     <a href="#">
                                                         <i class='bx bx-search-alt-2'>
@@ -128,6 +130,7 @@
 
 
         </section>
+    
     </header>
     <!-- the-second-part -->
     <div class="service-erea">
@@ -212,7 +215,7 @@
         <div class="container">
             <div class="largest-busines d-flex align-item-c">
                 <div class="man-photo">
-                    <img src="/img/about.png" alt="">
+                    <img src="img/about.png" alt="">
                 </div>
                 <div class="right-parag ">
                     <div class="parag">
@@ -440,7 +443,7 @@
                                 <div class="footer-widget">
                                     <div class="footer-logo">
                                         <a href="#">
-                                            <img src="/img/footer_logo.png" alt="">
+                                            <img src="img/footer_logo.png" alt="">
                                         </a>
                                     </div>
                                     <p>
