--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="style1.css">
     <!-- font-boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- responsive -->
+    <link rel="stylesheet" href="responsive.css">
 </head>
 
 <body>
@@ -49,7 +51,7 @@
                             <div class="row align-item-c d-flex">
                                 <div class="lego">
                                     <a href="/Home.html">
-                                        <img src="./img/logo-(2).png" alt="">
+                                        <img src="img/logo (2).png" alt="">
                                     </a>
                                 </div>
                                 <div class="menu">
@@ -182,7 +184,7 @@
                             <div class="footer-widget">
                                 <div class="footer-logo">
                                     <a href="#">
-                                        <img src="/img/footer_logo.png" alt="">
+                                        <img src="img/footer_logo.png" alt="">
                                     </a>
                                 </div>
                                 <p>
