--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contact</title>
     <!-- css -->
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style1.css">
+    <link rel="stylesheet" href="responsive.css">
     <!-- font-boxicons -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <!-- responsive -->
